// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverlayTrigger > Matches the closed snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="sc-hRDKVd kwslFf aje-btn aje-btn--primary is-auto"
    tabindex="0"
    type="button"
  >
    Trigger
  </button>
</DocumentFragment>
`;

exports[`OverlayTrigger > Matches the open snapshot 1`] = `
<DocumentFragment>
  <button
    aria-controls="react-aria-:r1:"
    aria-expanded="true"
    class="sc-hRDKVd kwslFf aje-btn aje-btn--primary is-auto"
    data-pressed="true"
    tabindex="0"
    type="button"
  >
    Trigger
  </button>
</DocumentFragment>
`;
